--- a/Address_Design/Views/AddressForm/Index.cshtml
+++ b/Address_Design/Views/AddressForm/Index.cshtml
@@ -1,77 +1,88 @@
 ﻿@model Address_Design.Models.Address
 @{
-    Layout = null;
+
 }
+@using Address_Design.Components
 <!DOCTYPE html>
 <html lang="en">
 <head>
-	<title>Index</title>
+    <title>Index</title>
+
+    <component type="typeof(Counter)" render-mode="ServerPrerendered"
+               param-InitialValue="InitialValue" />
+
+    @functions {
+        [BindProperty(SupportsGet = true)]
+        public int InitialValue { get; set; }
+    }
 </head>
 
 <script type="text/javascript" src="https://code.jquery.com/ui/1.10.4/jquery-ui.min.js"></script>
 <script type="text/javascript" src="https://code.jquery.com/jquery-1.7.1.min.js"></script>
 <script type="text/javascript">
-	$(document).ready(function() {
-		// when the DOM has fully loaded...
-		$("#btnSubmit").bind("click", function() {
-			var onEventLaunchAddressForm = new PostAddress();
-			onEventLaunchAddressForm.launchAddressView();
-		});
-	});
-	function PostAddress() {
-		this.launchAddressView = function() {
-			
-			// fetch values from input
-			var Street1 = $("#Street").val();
-			var ZipCode1 = $("#ZipCode").val();
-			
-			
-			// build json object
-			var address = {
-				Street: Street1,
-				ZipCode: ZipCode1,
-				
-			};
+    $(document).ready(function () {
+        // when the DOM has fully loaded...
+        $("#btnSubmit").bind("click", function () {
+            var onEventLaunchAddressForm = new PostAddress();
+            onEventLaunchAddressForm.launchAddressView();
+        });
+    });
+    function PostAddress() {
+        this.launchAddressView = function () {
 
-			 $.ajax({
-				type: "POST",
-				url: "AddressForm",
-				traditional: true,
-				contentType: 'application/json; charset=utf-8',
-				data: JSON.stringify(address),
-				success: function (data) { console.log(data) },
-				error: function (data) { console.log(data) }		        
-			});
-		
-		}
-	}
-	
+            // fetch values from input
+            var Street1 = $("#Street").val();
+            var ZipCode1 = $("#ZipCode").val();
+
+
+            // build json object
+            var address = {
+                Street: Street1,
+                ZipCode: ZipCode1,
+
+            };
+
+            $.ajax({
+                type: "POST",
+                url: "AddressForm",
+                traditional: true,
+                contentType: 'application/json; charset=utf-8',
+                data: JSON.stringify(address),
+                success: function (data) { console.log(data) },
+                error: function (data) { console.log(data) }
+            });
+
+        }
+    }
+
 </script>
 <body>
 
-<header>
-	<hgroup>
-		<h1>Address Form</h1>
-		<h3>Fill out and Submit!</h3>
-	</hgroup>
-</header>
+    <header>
+        <hgroup>
+            <h1>Address Form</h1>
+            <h3>Fill out and Submit!</h3>
+        </hgroup>
+    </header>
 
-<section>
-	<p>Fill out your information and send it to our server.</p>
-	
-	<p><input type="text" required="required" id="Street" placeholder="Enter the Street name" /></p>
-	<p><input type="number" id="Zipcode" placeholder="Enter Zipcode (optional)" /></p>
-	<p><input type="number" required="required" id="County" placeholder="Enter the County name" /></p>
-	<p><input type="String" required="required" id="Gender" placeholder="M or F or None? (single letter only)" size="1" /></p>
-	<p><input type="string" required="required" id="Country" placeholder="Enter the Counrty name" /></p>
-	
-	<p><input id="btnSubmit" type="button" value="Submit!" /></p>
-	
-	<div id="status"></div>
+    <section>
+        <p>Fill out your information and send it to our server.</p>
 
-</section>
+        <p><input type="text" required="required" id="Street" placeholder="Enter the Street name" /></p>
+        <p><input type="number" id="Zipcode" placeholder="Enter Zipcode (optional)" /></p>
+        <p><input type="number" required="required" id="County" placeholder="Enter the County name" /></p>
+        <p><input type="String" required="required" id="Gender" placeholder="M or F or None? (single letter only)" size="1" /></p>
+        <p><input type="string" required="required" id="Country" placeholder="Enter the Counrty name" /></p>
+
+        <p><input id="btnSubmit" type="button" value="Submit!" /></p>
+
+        <div id="status"></div>
+
+    </section>
+
 
 </body>
+
 </html>
 
 
