--- a/Address_Design/Views/Shared/_Layout.cshtml
+++ b/Address_Design/Views/Shared/_Layout.cshtml
@@ -4,18 +4,20 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>@ViewData["Title"] - Address Form</title>
-    
+
     <environment include="Development">
         <!--<link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.css" />
         <link rel="stylesheet" href="~/css/site.css" />-->
     </environment>
-    
+
     <environment exclude="Development">
         <link rel="stylesheet" href="https://ajax.aspnetcdn.com/ajax/bootstrap/3.3.7/css/bootstrap.min.css"
               asp-fallback-href="~/lib/bootstrap/dist/css/bootstrap.min.css"
               asp-fallback-test-class="sr-only" asp-fallback-test-property="position" asp-fallback-test-value="absolute" />
         <!--<link rel="stylesheet" href="~/css/site.min.css" asp-append-version="true" />-->
     </environment>
+
+    <base href="~/" />
 
 </head>
 <body>
@@ -24,10 +26,7 @@
             <div class="container">
                 <a class="navbar-brand" asp-controller="Address Form" asp-action="Index">Address Search</a>
                 <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
-                    <ul class="navbar-nav flex-grow-1">
-                        <li class="nav-item">
-                            <a class="nav-link text-muted" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
-                        </li>
+                    <ul class="navbar-nav flex-grow-1">>
                     </ul>
                 </div>
             </div>
@@ -47,6 +46,9 @@
     <!--<script src="~/lib/jquery/dist/jquery.min.js"></script>
     <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
     <script src="~/js/site.js" asp-append-version="true"></script>-->
+    ...
+    <script src="_framework/blazor.server.js"></script>
+
     @await RenderSectionAsync("Scripts", required: false)
 </body>
 </html>
