Integrating ToDo List View Compnent

--- a/Address_Design/Views/AddressForm/Index.cshtml
+++ b/Address_Design/Views/AddressForm/Index.cshtml
@@ -72,7 +72,11 @@
 
     </section>
 
-    
+   
+    <div>
+        @await Component.InvokeAsync("PriorityList", new { maxPriority = 2, isDone = false })
+    </div>
+
 </body>
 
 </html>
