Dynamic query generation added for the address being passed in.

--- a/Address_Design/Views/AddressForm/Index.cshtml
+++ b/Address_Design/Views/AddressForm/Index.cshtml
@@ -24,15 +24,15 @@
         this.launchAddressView = function () {
 
             // fetch values from input
-            var Street1 = $("#Street").val();
+            var Street1 = $("#AddressLine").val();
             var ZipCode1 = $("#ZipCode").val();
-
+            var Country1 = $("#Country").val();
 
             // build json object
             var address = {
-                Street: Street1,
+                AddressLine: Street1,
                 ZipCode: ZipCode1,
-
+                Country: Country1
             };
 
             $.ajax({
@@ -61,11 +61,11 @@
     <section>
         <p>Fill out your information and send it to our server.</p>
 
-        <p><input type="text" required="required" id="Street" placeholder="Enter the Street name" /></p>
-        <p><input type="number" id="Zipcode" placeholder="Enter Zipcode (optional)" /></p>
+        <p><input type="text" required="required" id="AddressLine" placeholder="Enter the Street name" /></p>
+        <p><input type="number" id="ZipCode" placeholder="Enter Zipcode (optional)" /></p>
         <p><input type="number" required="required" id="County" placeholder="Enter the County name" /></p>
         <p><input type="String" required="required" id="Gender" placeholder="M or F or None? (single letter only)" size="1" /></p>
-        <p><input type="string" required="required" id="Country" placeholder="Enter the Counrty name" /></p>
+        <p><input type="string" required="required" id="Country" placeholder="Enter the Country name" /></p>
 
         <p><input id="btnSubmit" type="button" value="Submit!" /></p>
 
