Change variable names in Index.cshtml

--- a/Address_Design/Views/AddressForm/Index.cshtml
+++ b/Address_Design/Views/AddressForm/Index.cshtml
@@ -27,10 +27,10 @@
             var parentElement = document.getElementById('formsection');
             document.getElementById('formsection').innerHTML = "";
             
-            //var MailingForm = CountryFormatReturn(strUser);
+            //var MailingForms = CountryFormatReturn(strUser);
 
             //var childElement = null;
-            //foreach(var item in MailingForm) {
+            //foreach(var form in MailingForms) {
             //    childElement = document.createElement('input');
             //}
             //var appendChildElement = parentElement.appendChild(childElement)
