Fix Misspelling in menu bar in Index.cshtml

--- a/Address_Design/Views/AddressForm/Index.cshtml
+++ b/Address_Design/Views/AddressForm/Index.cshtml
@@ -160,7 +160,7 @@
             <option value="Ukraine">Ukraine</option>
             <option selected value="United States">United States</option>
             <option value="Uruguay">Uruguay</option>
-            <option value="Wale">Wale</option>
+            <option value="Wales">Wales</option>
         </select>
         <input id="chooseCountry" type="button" value="Get Form!" />
     </form>
