Changed Page format in index.cshtml

--- a/Address_Design/Views/AddressForm/Index.cshtml
+++ b/Address_Design/Views/AddressForm/Index.cshtml
@@ -160,6 +160,7 @@
             <option value="Uruguay">Uruguay</option>
             <option value="Wales">Wales</option>
         </select>
+        &nbsp;
         <input id="chooseCountry" type="button" value="Get Form!" />
     </form>
 
@@ -167,9 +168,12 @@
         <div id="formsection">
 
         </div>
-
-        <p><input id="btnSubmit" type="button" value="Narrow Search!" /></p>
-        <p><input id="btnSubmit" type="button" value="Global Search!" /></p>
+        <br />
+        <p>
+            <input id="btnSubmit" type="button" value="Narrow Search!" />
+            &nbsp;
+            <input id="btnSubmit" type="button" value="Global Search!" />
+        </p>
         <div id="dvItems" style="font-size:24px;"></div>
 
     </section>
