Narrow Search functionality should now be working. Searches based on provided fields and only queries the fields that are available in the form for that specific country.

--- a/Address_Design/Views/AddressForm/Index.cshtml
+++ b/Address_Design/Views/AddressForm/Index.cshtml
@@ -59,6 +59,9 @@
                 } else {
                     address[idNoSpace] = document.getElementById(id).value;
                 }
+
+                var countrySelector = document.getElementById("browser");
+                address["country"] = countrySelector.value;
             }
 
             // fetch values from input
